# Aegis-Project

./: .coverage  .coveragerc  Aegis_Phase1_Blueprint.markdown  Dockerfile  LICENSE  README.md  aegis.db  install_tools.sh  pyproject.toml  requirements.txt
aegis/: __init__.py  aegis.db  aegis_export.csv  aegis_export.json  cli.py  database.py  diagnostic.py  scanners.py  test_vul_ssl_web.py  ui.py  utils.py
aegis_lite.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
aegis_v1/: old_cli.py
aegis_v2/: aegis.db  cli.py  scanners.py
backup/: requirements.txt  ui.py
docs/: API_REFERENCE.md  Aegis_Lite_Phase1_Blueprint.markdown  final-week-phase.txt
old builds/: old_scanners.py
test_aegis/: __init__.py  database.py  ui.py
tests/: aegis.db  database_test.py  nuclei_test.py  quick_test.py  run_all_tests.py  runtests.py  test_core.py  test_core_functionality.py  test_database.py  test_database_comprehensive.py  test_external_tools.py  test_integration.py  test_scan.py  test_scanners.py  test_scanners_mocked.py  test_scanners_unit.py  test_utils_comprehensive.py  thread_test.py
